--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 
   # linting
   - go get github.com/golang/lint
-  - go install github.com/golang/lint/golint
+  - go install golang.org/x/lint/golint
 
   # code coverage
   - go get golang.org/x/tools/cmd/cover
